--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -15,13 +15,20 @@ jobs:
         node-version: [18.x]
         
     steps:
-    - uses: actions/checkout@v4
+    - name: Checkout
+      uses: actions/checkout@v4
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v4
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: npm install
-    - run: npm start    
-    - run: npx playwright install
-    - run: npm start test:unit
+    - name: Install packages/modules
+      run: npm install
+    - name: Start app
+      run: npm start    
+    # - name: Install playwright for testing
+    #   run: npx playwright install
+    - name: Start tests
+      run: npm start test:unit
+
+      
