--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -7,12 +7,12 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build:
+  build-and-unit-test:
     runs-on: ubuntu-latest
 
     strategy:
       matrix:
-        node-version: [18.x]
+        node-version: [20.x]
         
     steps:
     - name: Checkout
@@ -32,3 +32,33 @@ jobs:
       run: npm run test:unit
     - name: Showcase student's name
       run: echo 'mdzhut200'
+
+  execute-ui-test:
+    needs: build-and-unit-test
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout the code
+      uses: actions/checkout@v4
+    - name: Use Node.js 20x
+      uses: actions/setup-node@v4
+      with:
+        node-version: 20.x
+        cache: 'npm'
+    - name: Install npm dependencies
+      run: npm install
+    - name: Install Playwright browsers
+      run:  npx playwright install
+    - name: Start the application
+      run:  npm run start
+    - name: Execute the UI tests
+      run:  npm run test:ui
+
+  deploy:
+    needs: execute-ui-test
+    runs-on: ubuntu-latest
+    steps:
+      - name: Deploy to production
+        uses: johnbeynon/render-deploy-action@v0.0.8
+        with:
+          service-id: ${{ secrets.SERVICE_KEY }}
+          api-key: ${{ secrets.RENDER_API_KEY }}
