--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -48,8 +48,8 @@ jobs:
       run: npm install
     - name: Install Playwright browsers
       run:  npx playwright install
-    - name: Start the application
-      run:  npm run start
+    # - name: Start the application
+    #   run:  npm run start
     - name: Execute the UI tests
       run:  npm run test:ui
 
